# mlang

./: .atom-dbg.cson  .gitignore  CMakeLists.txt  README.md  compiler.js  fibonacci.m  index.js  io.m  oldbesimplifier.js  parser.js  parser.pegjs  runtime.js  test.m  test.mo
compiler/: CMakeLists.txt  compiler.js  expressions.h  index.js  lexer.re2c  main.cpp  package.json  parser.cpp  parser.h  parser.js  parser.pegjs  scanner.cpp  scanner.h  statements.h  tokens.h  util.cpp  util.h
includes/: mmodule.h  opcodes.h  ops.h  runtime.h  runtime_state.h  scope.h  stack.h  stack_impl.h  types.h  vals.h
interpreter/: CMakeLists.txt  Makefile  main.cpp  mlang  ops.h  runtime.cpp  runtime.h  runtime_state.cpp  test.mo  vals.cpp  vals.h
interpreter/ops/: base.cpp  pop.cpp  push.cpp  pushb.cpp  pushmap.cpp  pushs.cpp  type_operator.cpp
interpreter/values/: base.cpp  boolean.cpp  function.cpp  map.cpp  null.cpp  number.cpp  string.cpp
stdlib/: CMakeLists.txt  io.cpp
